--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -20,18 +20,19 @@
   <h4 class="text-center pt-5">Termín odohrania zápasu</h4>
   <ol class="text-justify">
     <li class="pt-1">
-      <strong>NEODOHRATÉ ZÁPASY</strong><br>
+      <strong class="text-danger">NEODOHRATÉ ZÁPASY</strong><br>
       Obaja hráči zodpovedajú za to, aby stihli odohrať a nahlásiť výsledok zápasu v danom kole do okamihu
       žrebovania ďalšieho kola (žreb - nedeľa 20:00). V prípade, že niektorý z hráčov nemôže odohrať zápas
-      počas daného kola, odohratie zápasu sa môže odložiť do nasledujúceho kola
+      počas daného kola, odohratie zápasu sa môže odložiť do nasledujúceho kola,
       <strong class="text-danger">
-        ale odklad zápasu je nutné organizátorovi NAHLÁSIŤ! Neodohraté a nenahlásené zápasy sa NEODKLADAJÚ AUTOMATICKY.
+        ale odklad zápasu je nutné organizátorovi NAHLÁSIŤ PRED ŽREBOVANÍM!
+        Neodohraté a nenahlásené zápasy sa NEODKLADAJÚ AUTOMATICKY.
       </strong>
       Zápas sa dá odložiť iba do najbližsieho ďalšieho kola. Zápasy, ktoré sú do času žrebovania odignorované
       (tzn. nenahlásený ani výsledok, ani požiadavka na odklad) budú zmazané a nezapočítané, prípadne uzatvorené
       v prospech hráča, ktorý mal snahu o odohratie zápasu a komunikoval problém s organizátorom.<br>
-      Ak sa zápas odkladá, obaja hráči zápasu sú do ďalšieho kola žrebovaní akoby mali o 3 body viac.
       <strong class="text-danger">
+        Ak sa zápas odkladá, obaja hráči zápasu sú do ďalšieho kola žrebovaní akoby mali o 3 body viac.
         Z tohto dôvodu nebude možné odkladať zápas z predposledného kola do posledného, aby boli
         do posledného kola všetci žrebovaní podľa svojich reálne nahratých bodov.
       </strong>
