--- a/app/views/rounds/show.html.erb
+++ b/app/views/rounds/show.html.erb
@@ -54,34 +54,52 @@
 
 <p class="lead">Zápasy v tomto kole</p>
 
+<% published_matches = @matches.select { |m| m.published? } %>
+<% unpublished_matches = @matches.select { |m| !m.published } %>
+
 <div class="row">
   <div class="col">
     <ul class="nav nav-tabs" id="tab-matches" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" id="published-tab" data-toggle="tab" href="#published" role="tab" aria-controls="published" aria-selected="true">
-          Zverejnené <span class="badge badge-light"><%= @nr_published_matches %></span>
+          Zverejnené <span class="badge badge-light"><%= published_matches.length %></span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="draft-tab" data-toggle="tab" href="#draft" role="tab" aria-controls="draft" aria-selected="false">
-          Nezverejnené <span class="badge badge-light"><%= @nr_draft_matches %></span>
+          Nezverejnené <span class="badge badge-light"><%= unpublished_matches.length %></span>
         </a>
       </li>
     </ul>
     <div class="tab-content" id="tab-matches-content">
       <div class="tab-pane fade show active" id="published" role="tabpanel" aria-labelledby="published-tab">
-        <% planned_matches = @planned_matches.published %>
-        <% recent_matches = @recent_matches.published %>
-        <% previous_matches = @previous_matches.published %>
-        <% unplanned_matches = @unplanned_matches.published %>
-        <% if planned_matches.any? || recent_matches.any? || previous_matches.any?|| unplanned_matches.any? %>
-          <%= render 'matches/table',
-                     planned_matches: planned_matches,
-                     recent_matches: recent_matches,
-                     previous_matches: previous_matches,
-                     unplanned_matches: unplanned_matches,
-                     js_filter_target: 'matches-published',
-                     last_update_time: nil %>
+
+        <% if published_matches.length > 0 %>
+          <% unfinished_matches = published_matches.select { |m| m.finished_at.blank? } %>
+          <% finished_matches = published_matches.select { |m| m.finished_at.present? } %>
+
+          <div class="grid-wrapper matches">
+
+            <%= render partial: "matches/grid",
+                       locals: {
+                         heading_text: "Neodohraté",
+                         matches: unfinished_matches,
+                         dark_css_class: nil,
+                         light_css_class: nil,
+                         info_partial_up: "matches/datetime",
+                         info_partial_down: "matches/note"
+                       } if unfinished_matches.length > 0 %>
+
+            <%= render partial: "matches/grid",
+                       locals: {
+                         heading_text: "Odohraté",
+                         matches: finished_matches,
+                         dark_css_class: "table-bg-darken-green",
+                         light_css_class: "table-bg-green",
+                         info_partial_up: "matches/score",
+                         info_partial_down: "matches/datetime"
+                       } if finished_matches.length > 0 %>
+          </div>
         <% else %>
           <div class="row">
             <div class="col">
@@ -91,22 +109,33 @@
         <% end %>
       </div>
       <div class="tab-pane fade" id="draft" role="tabpanel" aria-labelledby="draft-tab">
-        <% planned_matches = @planned_matches.draft %>
-        <% recent_matches = @recent_matches.draft %>
-        <% previous_matches = @previous_matches.draft %>
-        <% unplanned_matches = @unplanned_matches.draft %>
-        <% if planned_matches.any? || recent_matches.any? || previous_matches.any? || unplanned_matches.any? %>
-          <%= render 'matches/table',
-                     planned_matches: planned_matches,
-                     recent_matches: recent_matches,
-                     previous_matches: previous_matches,
-                     unplanned_matches: unplanned_matches,
-                     js_filter_target: 'matches-draft',
-                     last_update_time: nil %>
 
-          <p class="text-center">
-            <%= double_confirm_button('Zverejniť všetky!', publish_all_matches_round_path(@round), 'btn btn-sm btn-success') %>
-          </p>
+        <% if unpublished_matches.length > 0 %>
+          <% unfinished_matches = unpublished_matches.select { |m| m.finished_at.blank? } %>
+          <% finished_matches = unpublished_matches.select { |m| m.finished_at.present? } %>
+
+          <div class="grid-wrapper matches">
+
+            <%= render partial: "matches/grid",
+                       locals: {
+                         heading_text: "Neodohraté",
+                         matches: unfinished_matches,
+                         dark_css_class: nil,
+                         light_css_class: nil,
+                         info_partial_up: "matches/datetime",
+                         info_partial_down: "matches/note"
+                       } if unfinished_matches.length > 0 %>
+
+            <%= render partial: "matches/grid",
+                       locals: {
+                         heading_text: "Odohraté",
+                         matches: finished_matches,
+                         dark_css_class: "table-bg-darken-green",
+                         light_css_class: "table-bg-green",
+                         info_partial_up: "matches/score",
+                         info_partial_down: "matches/datetime"
+                       } if finished_matches.length > 0 %>
+          </div>
         <% else %>
           <div class="row">
             <div class="col">
