--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -8,7 +8,7 @@
       <!-- <span class="float-left">(lopty)</span> -->
     <%# end %>
     <div class="float-right">
-      <%= link_to 'Všetky zápasy', matches_path(round_id: @match.round_id), class: 'btn btn-outline-success my-1' %>
+      <%= link_to 'Všetky zápasy', matches_path, class: 'btn btn-outline-success my-1' %>
       <% if user_signed_in? %>
         <%= link_to 'Upraviť', edit_match_path(@match), class: 'btn btn-success my-1' %>
         <% if policy(@match).destroy? %>
