--- a/app/views/shared/_app_date.html.erb
+++ b/app/views/shared/_app_date.html.erb
@@ -3,15 +3,26 @@
   day = ["ned", "pon", "uto", "str", "štv", "pia", "sob"][date.wday]
   dt = date.day
   mn = ["jan", "feb", "mar", "apr", "máj", "jún", "júl", "aug", "sep", "okt", "nov", "dec"][date.month - 1]
+  close_day = case date
+              when Date.yesterday
+                "včera"
+              when Date.today
+                "dnes"
+              when Date.tomorrow
+                "zajtra"
+              end
 %>
 
 <% if vertical %>
   <div class="text-center" style="display: inline-block;">
+    <% if close_day %>
+      <%= close_day %><br>
+    <% end %>
     <%= day %><br>
     <span class="nowrap">
       <%= "#{dt}. #{mn}" %>
     </span>
   </div>
 <% else %>
-  <span class="nowrap"><%= "#{day} #{dt}. #{mn}" %></span>
+  <span class="nowrap"><%= "#{[close_day, day].compact.join(' ')} #{dt}. #{mn}" %></span>
 <% end %>
