Fixed displaying unplanned matches.

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -114,7 +114,7 @@
                  light_css_class: nil,
                  info_partial_up: "matches/datetime",
                  info_partial_down: "matches/note"
-               } if @planned_matches.first %>
+               } if @unplanned_matches.first %>
 
   </div>
 <% else %>
