--- a/app/views/matches/_grid.html.erb
+++ b/app/views/matches/_grid.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <% matches.each do |match| %>
-  <div class="grid-row grid-row-matches <%= light_css_class %>">
+  <div class="grid-row grid-row-matches search-row <%= light_css_class %>">
     <% player1_class = match.player1 == match.winner ? dark_css_class : light_css_class %>
     <% player2_class = match.player2 == match.winner ? dark_css_class : light_css_class %>
     <div class="grid-row__cell grid-row-matches__r1c1 text-center <%= player1_class %>">
