--- a/app/views/rankings/index.html.erb
+++ b/app/views/rankings/index.html.erb
@@ -100,7 +100,7 @@
     </thead>
     <tbody class="rankings">
       <% @rankings.each_with_index do |ranking, i| %>
-        <tr class="<%= rankings_table_row_css_class(ranking) %>">
+        <tr class="search-row <%= rankings_table_row_css_class(ranking) %>">
           <td><%= i + 1 %></td>
           <td>
             <span class="js-filterable">
