--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,9 +14,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <%= link_to 'Sezóna 2022', pages_season2022_path, class: 'nav-link'  %>
-        </li>
+<!--        <li class="nav-item">-->
+          <%#= link_to 'Sezóna 2022', pages_season2022_path, class: 'nav-link'  %>
+<!--        </li>-->
         <li class="nav-item">
           <%= link_to 'Rebríček', rankings_path, class: 'nav-link'  %>
         </li>
