--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,5 @@
 <footer class="footer mt-5">
+  <%= render 'shared/separator' %>
   <div class="row">
     <div class="col-12">
       <p class="text-center p-2">
