Updated navbar link.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to 'Sezóna 2023', pages_season2023_path, class: 'nav-link'  %>
+          <%= link_to 'Zápasy', matches_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
           <%= link_to 'Rebríček', rankings_path, class: 'nav-link'  %>
