Updated text on page.

--- a/app/views/pages/season2023.html.erb
+++ b/app/views/pages/season2023.html.erb
@@ -57,11 +57,15 @@
     kola, ak sa tak so súperom viete dohodnúť. Zápasy, ktoré budú na konci kola neodohraté
     (tzn. nenahlásený výsledok) a nepožiadané o preloženie, budú považované za odignorované a tým
     pádom zrušené.
+  </p>
   <ul>
     <li>preloženie je potrebné dohodnúť so súperom a oznámiť dohodu organizátorovi</li>
     <li>zápas sa dá preložiť iba do najbližšieho ďalšieho kola</li>
     <li>žiadny zápas sa nedá preložiť do posledného 9. kola</li>
   </ul>
+  <p class="text-justify">
+    Každý zápas je potrebné vopred nahlásiť organizátorovi SMS/WhatsApp správou kde a kedy sa bude konať!
+  </p>
 
   <hr>
 
