Updated season 2023 page.

--- a/app/views/pages/season2023.html.erb
+++ b/app/views/pages/season2023.html.erb
@@ -152,4 +152,21 @@
       <% end %>
     </div>
   <% end %>
+
+  <hr>
+
+  <h2 class="text-center pt-5">
+    Turnaj ATATennis!
+  </h2>
+  <p>
+    Na začiatok mája je pripravená ešte jedna tenisová udalosť v Topoľčanoch a to turnaj obľúbenej
+    súťaže ATATennis. Konať sa bude na kurtoch na Mravenisku cez víkend 6.-7. mája. Každý má teda šancu
+    zahrať si s novými súpermi na svojej úrovni, spoznať nových hráčov a dobre sa zabaviť.
+    S prihlasovaním netreba otálať príliš dlho, tieto turnaje sú obľúbené a zvyknú sa rýchlo zaplniť.
+    Pre prihlásenie kontaktuj riaditeľa súťaže Michala Liptáka na
+    <br><br>
+    <%= link_to '📞 0907 121 797', 'tel:0907121797', class: 'quiet-link' %><br>
+    <%= link_to '✉️ michal.liptak@atatennis.sk', 'mailto:michal.liptak@atatennis.sk', class: 'quiet-link' %><br>
+    <%= link_to 'https://atatennis.sk/?p=clanok&id=272', 'https://atatennis.sk/?p=clanok&id=272', target: :_blank %>
+  </p>
 </div>
