--- a/app/views/pages/season2023.html.erb
+++ b/app/views/pages/season2023.html.erb
@@ -23,7 +23,7 @@
   <p class="text-danger text-center"><b>najneskôr do piatku 21. apríla.</b></p>
 
   <p class="text-justify">
-    <b>POZOR</b> - hrať sa bude 9 dvojtýždňových kol a začína sa už v piatok 28. apríla! V prípade, že nebude
+    <b>POZOR</b> - hrať sa bude 8 dvojtýždňových kol a začína sa v piatok 5. mája! V prípade, že nebude
     prihlásených dostatok hráčov (tzn. uhradené štartovné), súťaž sa nebude môcť konať, takže ideálny
     čas na odklikanie platby je práve teraz.
   </p>
@@ -35,15 +35,14 @@
     Informácia o nasadených hráčoch bude vo forme samostatného článku na tomto webe.
   </p>
   <ul>
-    <li><b>1. kolo:</b> 28.4.-14.5.</li>
-    <li><b>2. kolo:</b> 15.5.-28.5.</li>
-    <li><b>3. kolo:</b> 29.5.-11.6.</li>
-    <li><b>4. kolo:</b> 12.6-25.6.</li>
-    <li><b>5. kolo:</b> 26.6.-9.7.</li>
-    <li><b>6. kolo:</b> 10.7.-23.7.</li>
-    <li><b>7. kolo:</b> 24.7.-6.8.</li>
-    <li><b>8. kolo:</b> 7.8.-20.8.</li>
-    <li><b>9. kolo:</b> 21.8.-3.9.</li>
+    <li><b>1. kolo:</b> 5.5.-21.5.</li>
+    <li><b>2. kolo:</b> 22.5.-4.6.</li>
+    <li><b>3. kolo:</b> 5.6.-18.6.</li>
+    <li><b>4. kolo:</b> 19.6.-2.7.</li>
+    <li><b>5. kolo:</b> 3.7.-16.7.</li>
+    <li><b>6. kolo:</b> 17.7.-30.7.</li>
+    <li><b>7. kolo:</b> 31.7.-13.8.</li>
+    <li><b>8. kolo:</b> 14.8.-27.8.</li>
     <li>---------------</li>
     <li><b>Semifinále:</b> piatok 8.9.</li>
     <li><b>Finále:</b> sobota 9.9.</li>
