Changed info on 2023 season page.

--- a/app/views/pages/season2023.html.erb
+++ b/app/views/pages/season2023.html.erb
@@ -60,7 +60,7 @@
   <ul>
     <li>preloženie je potrebné dohodnúť so súperom a oznámiť dohodu organizátorovi</li>
     <li>zápas sa dá preložiť iba do najbližšieho ďalšieho kola</li>
-    <li>žiadny zápas sa nedá preložiť do posledného 9. kola</li>
+    <li>žiadny zápas sa nedá preložiť do posledného kola</li>
   </ul>
   <p class="text-justify">
     Každý zápas je potrebné vopred nahlásiť organizátorovi SMS/WhatsApp správou kde a kedy sa bude konať!
