Changed notice on page.

--- a/app/views/rounds/_progress.html.erb
+++ b/app/views/rounds/_progress.html.erb
@@ -21,9 +21,8 @@
       <% if round.period_ends && missing_matches %>
         <b>
           <span class="attention-background <%= highlight ? 'text-danger' : 'text-success' %>">
-            Prosíme hráčov, aby organizátorovi súťaže nahlásili čas a miesto svojho zápasu
-            v tomto kole najneskôr do termínu
-            <%= I18n.localize(round.period_ends - 7.days, format: :date_month) %>, 20:00.
+            Prosíme hráčov, aby po dohodnutí so súperom nahlásili čas a miesto zápasu
+            organizátorovi WhatsApp/SMS správou na č. 0905 289 248.
           </span>
         </b>
       <% end %>
