--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
           <%= link_to 'Novinky', articles_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Hráči', enrollments_path, class: 'nav-link'  %>
+          <%= link_to '2023', pages_season2023_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
           <%= link_to "História", history_seasons_path, class: 'nav-link' %>
