Changed page of rules.

--- a/app/views/pages/rules.html.erb
+++ b/app/views/pages/rules.html.erb
@@ -61,14 +61,14 @@
       tenisu.
     </li>
     <li class="pt-1">
-      V zápase, ktorý si hráči rozhodujú sami hlási hráč "out" na svojej strane kurtu súperovi vždy iba vtedy,
+      V zápase, ktorý si hráči rozhodujú sami hlási hráč "out" na svojej strane kurtu súperovi vždy <b>iba vtedy</b>,
       keď si je istý, že lopta dopadla mimo dvorec. Ak si hráč nie je istý, či lopta dopadla na čiaru,
-      alebo mimo dvorec, lopta sa považuje za "in". Hráme na antukových kurtoch a potvrdenie dopadu lopty sa riadi
-      odtlačkou lopty na kurte. Ak ma súper pochybnosť o hlásení "out", musí to riešiť bezodkladne a ísť sa
-      presvedčiť o mieste dopadu lopty, dodatočné reklamácie výroku "out" sa neuznávajú. V prípade, že lopta
-      dopadla na miesto, kde je kurt natoľko vybehaný, že nezanechala po dopade stopu, spoliehame sa v prvom rade
-      na džentlmentstvo oboch hráčov a vzájomne ústretovú dohodu. Ak sa takáto dohoda nedarí, o verdikte rozhodne
-      organizátor.
+      alebo mimo dvorec, lopta sa považuje za "in" a výmena pokračuje. Hráme na antukových kurtoch a potvrdenie dopadu lopty sa riadi
+      odtlačkou lopty na kurte. To znamená, že ak lopta v hre letí tak, že zjavne dopadne blízko čiary, hráč musí dbať na to,
+      aby vedel bezodkladne označiť odtlačku dopadnutej lopty, je to jeho zodpovednosť. V prípade, že hráč nevie ukázať miesto dopadu lopty,
+      nemôže dopad lopty hlásiť ako "out". Ak ma súper pochybnosť o hlásení "out", musí to riešiť bezodkladne a ísť sa hneď
+      presvedčiť o mieste dopadu lopty, dodatočné reklamácie výroku "out" sa neuznávajú. Ak sa hráči nevedia sami dohodnúť
+      ohľadom dopadu lopty, o verdikte rozhodne organizátor.
     </li>
     <li class="pt-1">
       Hráči sa môžu pred zápasom dohodnúť na rozhodcovi zápasu. Ak obaja hráči (aj nimi zvolený rozhodca)
