Changed information on static pages.

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -42,21 +42,66 @@
 </p>
 <div class="collapse" id="match-instructions">
   <div class="card card-body text-justify">
+    <p>
+      <small>
+        Termín a miesto zápasu si dohodnite <strong>čím skôr</strong> po vyžrebovaní každého hracieho kola,
+        ideálne hneď v pondelok po žrebovaní. Predídete tak problémom dohodnúť sa keď už perióda končí
+        a ostáva málo dní na odohratie.
+        <strong>
+          Po dohodnutí zápasu informujte organizátora o mieste a čase dohodnutého zápasu WhatsApp/SMS správou
+          na číslo 0905 289 248.
+        </strong>
+      </small>
+    </p>
+
+    <p>
+      <small>
+        Hráč č. 1 je zodpovedný za zabezpečenie kurtu, na ktorom sa zápas odohrá. Má právo výberu kurtu a má
+        povinnosť ho zaplatiť na celý zápas. Pokiaľ sa obaja hráči nedohodnú inak, schválené kurty pre súťaž
+        sú len:
+      </small>
+    </p>
+    <ul>
+      <li><small>Mravenisko - TC Topoľčany</small></li>
+      <li><small>Kurty v mestskom parku</small></li>
+      <li><small>Kurty na mestskom kúpalisku</small></li>
+    </ul>
+    <p>
+      Hráč č. 2 musí rešpektovať výber kurtu hráča č. 1 v týchto kluboch. Ak hráč č. 1 zápasu chce zápas
+      odohrať na iných kurtoch, je k tomu potrebný súhlas súpera - hráča č. 2!
+    </p>
+    <p>
+      <small>
+        Hráč č. 2 je zodpovedný za zabezpečenie nových lôpt na zápas, ktoré sa otvoria pred zápasom na kurte.
+        Štandardne sa na 1 zápas používa 1 pixla lôpt.
+        Ak sa zápas z nejakého dôvodu preruší a jeho dohratie sa odkladá na neskôr ako nasledujúci deň,
+        na dohratie zápasu prinesie hráč č. 2 znova nové lopty, ak sa obaja hráči nedohodnú inak, napr. že dohrajú s pôvodnými.
+        <br>
+        Hráči sa môžu dohodnúť aj na inom spôsobe výmeny lôpt za nové, no pokiaľ sa nedohodnú platí
+        vyššie uvedené.
+        <br><br>
+        Na zápas sa akceptuje iba profesionálna tlakovaná tenisová lopta. Konkrétna značka a typ je na
+        výbere hráča č. 2, no tu je zoznam značiek a typov lôpt, ktoré sú v súťaži používané a musia byť
+        hráčom č. 1 akceptované.
+      </small>
+    </p>
+    <ul>
+      <li><small>Dunlop Fort</small></li>
+      <li><small>Dunlop ATP</small></li>
+      <li><small>Dunlop AO</small></li>
+      <li><small>Wilson Roland Garros</small></li>
+      <li><small>Wilson US Open</small></li>
+      <li><small>Slazenger Wimbledon</small></li>
+      <li><small>Head Championship</small></li>
+    </ul>
+
     <small>
-      Termín a miesto zápasu si dohodnite <strong>čím skôr</strong> po vyžrebovaní každého hracieho kola.
-      <strong>
-        Po dohodnutí zápasu informujte organizátora o mieste a čase dohodnutého zápasu správou
-        na číslo 0905 289 248.
-      </strong>
-      Oficiálnymi loptami súťaže sú <strong>Dunlop Fort, Dunlop ATP, Head ATP a Slazenger Wimbledon</strong>.
-      Iné lopty možno použiť len so súhlasom súpera.
-      Podľa pravidiel súťaže sa <strong>každý zápas hrá s úplne novými loptami</strong>.
       Ak zápas dospeje do stavu 1:1 na sety, o víťazovi rozhoduje supertiebreak (tiebreak, ktorý
       sa hrá do 10 s rozdielom minimálne dvoch bodov). <strong>Ak obaja hráči súhlasia a majú
       dostatočne veľkú časovú rezervu</strong>, môžu na rozhodnutie zápasu odohrať štandardný tretí set.
-      <p class="text-center"><button class="btn btn-success btn-sm mt-3" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">Ok</button></p>
-      <p class="text-center"><%= link_to 'viac info', pages_about_path, class: 'text-center' %></p>
     </small>
+    <p class="text-center"><small><button class="btn btn-success btn-sm mt-3" type="button" data-toggle="collapse" data-target="#match-instructions" aria-expanded="false" aria-controls="match-instructions">Ok</button></small></p>
+    <p class="text-center"><small><%= link_to 'viac info', pages_about_path, class: 'text-center' %></small></p>
   </div>
 </div>
 
