--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -24,12 +24,14 @@
   </p>
   <p class="text-justify">
     Hráč napísaný v zápase ako prvý má právo výberu kurtu zaradeného do súťaže, na ktorom sa zápas odohrá,
-    tento kurt zarezervuje a zaplatí. Kurty zaradené do súťaže sú kurty v mestskom parku a kurty na Mravenisku - TC Topoľčany.
-    Ak chce hráč odohrať zápas na inom kurte, potrebuje na to súhlas svojho súpera.
+    tento kurt zarezervuje a zaplatí.
     <br>
     Hráč napísaný ako druhý prinesie na zápas <strong><u>nové</u></strong> lopty. Každý hráč bude približne rovnaký počet
-    krát napísaný ako prvý a druhý. Oficiálnymi loptami súťaže sú Dunlop Fort, Dunlop ATP, Head ATP a Slazenger Wimbledon.
-    <strong>Iné lopty možno použiť len so súhlasom súpera</strong>.
+    krát napísaný ako prvý a druhý.
+  </p>
+
+  <p class="text-justify">
+    Presné inštrukcie ohľadom výberu kurtov a lôpt sú na stránke zápasov pod tlačítkom "Inštrukcie k zápasom".
   </p>
 
   <h4 class="text-center pt-5" id="pointing-system">Spôsob bodovania</h4>
