--- a/app/views/pages/season2023.html.erb
+++ b/app/views/pages/season2023.html.erb
@@ -70,8 +70,9 @@
   <hr>
 
   <p class="text-justify">
-    Oficiálne kurty súťaže sú kurty v mestskom parku a kurty na Mravenisku (TC Topoľčany). Ak hráč č. 1
-    zápasu chce zápas odohrať na iných kurtoch, je k tomu potrebný súhlas súpera - hráča č. 2!
+    Oficiálne kurty súťaže sú 1) Mravenisko (TC Topoľčany), 2) kurty v mestskom parku a 3) kurty na kúpalisku.
+    Hráč č. 2 musí rešpektovať výber kurtu hráča č. 1 v týchto kluboch. Ak hráč č. 1 zápasu chce zápas
+    odohrať na iných kurtoch, je k tomu potrebný súhlas súpera - hráča č. 2!
   </p>
 
   <p class="text-justify">
