Changed information on static pages.

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -67,8 +67,10 @@
       <li><small>Kurty na mestskom kúpalisku</small></li>
     </ul>
     <p>
-      Hráč č. 2 musí rešpektovať výber kurtu hráča č. 1 v týchto kluboch. Ak hráč č. 1 zápasu chce zápas
-      odohrať na iných kurtoch, je k tomu potrebný súhlas súpera - hráča č. 2!
+      <small>
+        Hráč č. 2 musí rešpektovať výber kurtu hráča č. 1 v týchto kluboch. Ak hráč č. 1 zápasu chce zápas
+        odohrať na iných kurtoch, je k tomu potrebný súhlas súpera - hráča č. 2!
+      </small>
     </p>
     <p>
       <small>
