Added static page for reservations.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,6 +21,9 @@
           <%= link_to 'Rebríček', rankings_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
+          <%= link_to 'Rezervácie', pages_reservations_path, class: 'nav-link'  %>
+        </li>
+        <li class="nav-item">
           <%= link_to 'Novinky', articles_path, class: 'nav-link'  %>
         </li>
         <li class="nav-item">
