Added static page for reservations.

--- a/app/views/pages/reservations.html.erb
+++ b/app/views/pages/reservations.html.erb
@@ -45,8 +45,8 @@
         <hr>
         <p class="card-text text-justify">
           Kurty v parku sa rezervujú cez SMS na číslo 0911 503 355. Voľné termíny je možné vidieť vopred cez
-          tlačidlo nižšie. Na stránke sú dva kalendáre pre každý kurt zvlášť, po výbere dátumu sa zobrazia voľné možnosti.
-          Rezervácia platí po obdržaní potvrdenia.
+          tlačidlo nižšie. Na stránke sú dva kalendáre pre každý kurt zvlášť, po výbere dátumu sa zobrazia voľné možnosti pre daný kurt.
+          Rezervácia platí po obdržaní potvrdenia SMS správou.
         </p>
         <p class="text-center">
           <%= link_to 'Rezervácie 🌳', 'https://kurty.zap.sk', class: 'btn btn-danger', target: :_blank %>
